Integration testing script